--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+@import './styles/base';
+@import './styles/material-theme/';
+@import './styles/material/material-styles';
+@import './styles/variables';
+@import './styles/mixins';
+@import './styles/animation';
+
+@import './styles/nav-bar';
