--- a/src/app/admin/components/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/admin/components/breadcrumbs/breadcrumbs.component.html
@@ -1,6 +1,6 @@
-<h2 *ngIf="childRoute">{{ childRoute }}</h2>
-<p *ngIf="childRoute">
-  <a href="">{{ homeRoute }}</a>
+<h2 *ngIf="childRouteName">{{ childRouteName }}</h2>
+<p *ngIf="childRouteName">
+  <a href="">{{ homeRouteName }}</a>
   <span> > </span>
-  <span>{{ childRoute }}</span>
+  <span>{{ childRouteName }}</span>
 </p>
