--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,2 +1,8 @@
 $primary: #2196f3;
 $accent: #26c6da;
+$text-primary-hover-color: #7460ee;
+$black-1-opacity: rgba(9, 32, 51, 0.1);
+$black-3-opacity: rgba(9, 32, 51, 0.3);
+$black-5-opacity: rgba(9, 33, 52, 0.5);
+$black-7-opacity: rgba(9, 32, 51, 0.7);
+$black-10-opacity: rgba(9, 33, 52, 1);
