--- a/src/app/admin/components/nav-bar-side-bar-list/nav-bar-side-bar-list.component.html
+++ b/src/app/admin/components/nav-bar-side-bar-list/nav-bar-side-bar-list.component.html
@@ -2,14 +2,15 @@
   <div class="lqh-mat-accordion">
     <mat-expansion-panel
       *ngFor="let panel of accordionList"
-      [hideToggle]="panel.isHideToggle"
+      [hideToggle]="!(panel.children && panel.children.length > 0)"
       [expanded]="panel.isExpanded"
       [disabled]="panel.isDisabled"
       [routerLink]="panel.url ? panel.url : null"
     >
-      <mat-expansion-panel-header>
-        <mat-panel-title>
-          {{ panel.routeName }}
+      <mat-expansion-panel-header [collapsedHeight]="'43px'" [expandedHeight]="'44px'">
+        <mat-panel-title class="lqh-mat-panel-title">
+          <mat-icon *ngIf="panel.matIcon">{{ panel.matIcon }}</mat-icon>
+          <span>{{ panel.routeName }}</span>
         </mat-panel-title>
       </mat-expansion-panel-header>
       <mat-nav-list>
