--- a/src/styles/nav-bar/_nav-bar-list.scss
+++ b/src/styles/nav-bar/_nav-bar-list.scss
@@ -4,10 +4,11 @@
   .mat-expansion-panel {
     .mat-expansion-panel-header {
       padding: 0 16px;
+      margin-bottom: 10px;
+      align-items: center;
       &.mat-expanded:focus,
       &.mat-expanded {
-        height: 48px !important;
-        background-color: #26c6da;
+        background-color: $accent;
         font-weight: 500;
         box-shadow: 0 3px 3px -2px rgba(0, 0, 0, 0.2), 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 1px 8px 0 rgba(0, 0, 0, 0.12);
         .mat-expansion-panel-header-title {
@@ -26,6 +27,19 @@
     .mat-list-item {
       font-size: 15px;
       border-radius: 4px;
+      height: 42px;
+    }
+
+    .lqh-mat-panel-title {
+      color: $black-7-opacity;
+
+      &.mat-expansion-panel-header-title {
+        align-items: center;
+      }
+
+      .mat-icon {
+        padding-right: 15px;
+      }
     }
 
     &.mat-expansion-panel-spacing {
