--- a/src/styles/nav-bar/_nav-bar-profile.scss
+++ b/src/styles/nav-bar/_nav-bar-profile.scss
@@ -1,27 +1,8 @@
-.sidenav-container {
-  height: 100%;
-  padding-top: 3.5rem;
-}
-
-.sidenav {
-  width: 240px;
-  z-index: 3;
-  padding-top: 3.5rem;
-  border-right: none;
-}
-
-.mat-toolbar.header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-}
-
 .person-profile {
   &__avatar.mat-card-avatar {
     margin: {
-      top: 40px;
-      bottom: 50px;
+      top: 37px;
+      bottom: 37px;
       left: 30px;
     }
 
@@ -34,7 +15,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: $black-5-opacity;
     .mat-button {
       width: 100%;
       color: #ffffff;
@@ -42,6 +23,13 @@
     .mat-menu-content {
       width: 200px !important;
     }
+  }
+
+  .ring-ph-circle {
+    width: 80px;
+    height: 80px;
+    top: 20px;
+    left: 13px;
   }
 }
 
