--- a/src/app/admin/nav-bar-profile/nav-bar-profile.component.scss
+++ b/src/app/admin/nav-bar-profile/nav-bar-profile.component.scss
@@ -1,6 +1,6 @@
 .person-profile {
   height: 160px;
-  background: url(../../../../assets/images/bkg-ne.jpg);
+  background: url(../../../assets/images/bkg-ne.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
