--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,5 +13,6 @@
 
 @import './styles/employees/employees';
 @import './styles/employees/employees-table';
+@import './styles/employees/employees-form';
 
 @import './styles/responsive';
