--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,13 @@
 $primary: #2196f3;
 $accent: #26c6da;
 $text-primary-hover-color: #7460ee;
+
+$black: rgba(9, 33, 52, 1);
 $black-1-opacity: rgba(9, 32, 51, 0.1);
 $black-3-opacity: rgba(9, 32, 51, 0.3);
 $black-5-opacity: rgba(9, 33, 52, 0.5);
 $black-7-opacity: rgba(9, 32, 51, 0.7);
 $black-10-opacity: rgba(9, 33, 52, 1);
+
+$disabled-color-1: rgba(0, 0, 0, 0.12);
+$disabled-color-2: rgba(0, 0, 0, 0.26);
