--- a/src/app/admin/product/authors/components/authors/authors.component.html
+++ b/src/app/admin/product/authors/components/authors/authors.component.html
@@ -1,14 +1,14 @@
 <mat-card class="lqh-mat-card">
   <mat-card-header>
-    <mat-card-title class="lqh-mat-card__title">Employee List</mat-card-title>
+    <mat-card-title class="lqh-mat-card__title">Author List</mat-card-title>
   </mat-card-header>
   <mat-card-actions class="lqh-mat-card__action">
-    <button mat-flat-button color="primary" (click)="openCreateEmployeesDialog()">
+    <button mat-flat-button color="primary" (click)="openCreateAuthorsDialog()">
       <mat-icon>add</mat-icon>
-      Add New Employee
+      Add New Author
     </button>
   </mat-card-actions>
   <mat-card-content>
-    <app-employees-table></app-employees-table>
+    <app-authors-table></app-authors-table>
   </mat-card-content>
 </mat-card>
