--- a/src/app/admin/product/authors/components/authors-table/authors-table.component.html
+++ b/src/app/admin/product/authors/components/authors-table/authors-table.component.html
@@ -17,38 +17,12 @@
       <td mat-cell *matCellDef="let element">{{ element.dob }}</td>
     </ng-container>
 
-    <!-- Age Column -->
-    <ng-container matColumnDef="age">
-      <th mat-header-cell *matHeaderCellDef>Age</th>
-      <td mat-cell *matCellDef="let element">{{ element.age }}</td>
-    </ng-container>
-
-    <!-- Gender Column -->
-    <ng-container matColumnDef="gender">
-      <th mat-header-cell *matHeaderCellDef>Gender</th>
-      <td mat-cell *matCellDef="let element">{{ element.gender }}</td>
-    </ng-container>
-
-    <!-- Department Column -->
-    <ng-container matColumnDef="department">
-      <th mat-header-cell *matHeaderCellDef>Department</th>
+    <!-- Description Column -->
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef>Description</th>
       <td mat-cell *matCellDef="let element">
-        <span [ngClass]="'employee ' + element.department | lowercase">
-          {{ element.department }}
-        </span>
+        {{ element.description }}
       </td>
-    </ng-container>
-
-    <!-- Email Column -->
-    <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef>Email</th>
-      <td mat-cell *matCellDef="let element">{{ element.email }}</td>
-    </ng-container>
-
-    <!-- Phone Column -->
-    <ng-container matColumnDef="phone">
-      <th mat-header-cell *matHeaderCellDef>Phone</th>
-      <td mat-cell *matCellDef="let element">{{ element.phone }}</td>
     </ng-container>
 
     <!-- Action Column -->
