--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,10 @@
 @import './styles/material/material-styles';
 @import './styles/variables';
 @import './styles/mixins';
+
+@import './styles/table';
+@import './styles/card';
+@import './styles/form';
 @import './styles/animation';
 
 @import './styles/nav-bar/nav-bar';
