layout for uploading image

--- a/src/app/admin/authors/components/authors-form/authors-form.component.html
+++ b/src/app/admin/authors/components/authors-form/authors-form.component.html
@@ -8,7 +8,7 @@
     </div>
   </div>
   <!-- <h2 mat-dialog-title>Edit Employees</h2> -->
-  <form mat-dialog-content *ngIf="authorsForm" [formGroup]="authorsForm" class="form-wrapper">
+  <form mat-dialog-content *ngIf="form" [formGroup]="form" class="form-wrapper">
     <mat-grid-list cols="12" rowHeight="80px">
       <mat-grid-tile [colspan]="4" [rowspan]="7">
         <div class="upload-file-wrapper">
