--- a/src/app/admin/categories/components/categories-table/categories-table.component.html
+++ b/src/app/admin/categories/components/categories-table/categories-table.component.html
@@ -5,17 +5,16 @@
       <th mat-header-cell *matHeaderCellDef>Name</th>
       <td mat-cell *matCellDef="let element">
         <div class="full-name__wrapper">
-          <img mat-card-avatar src="../../../../assets/images/avatar.jpg" />
           <a routerLink="/admin/employees">{{ element.name }}</a>
         </div>
       </td>
     </ng-container>
 
-    <!-- Email Column -->
-    <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef>Email</th>
+    <!-- Parent category Column -->
+    <ng-container matColumnDef="parentCategory">
+      <th mat-header-cell *matHeaderCellDef>Parent Category</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.email }}
+        {{ element.parentCategory }}
       </td>
     </ng-container>
 
@@ -24,14 +23,6 @@
       <th mat-header-cell *matHeaderCellDef>Description</th>
       <td mat-cell *matCellDef="let element">
         {{ element.description }}
-      </td>
-    </ng-container>
-
-    <!-- Description Column -->
-    <ng-container matColumnDef="address">
-      <th mat-header-cell *matHeaderCellDef>Address</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.address }}
       </td>
     </ng-container>
 
