--- a/src/app/admin/categories/components/categories/categories.component.html
+++ b/src/app/admin/categories/components/categories/categories.component.html
@@ -1,14 +1,14 @@
 <mat-card class="lqh-mat-card">
   <mat-card-header>
-    <mat-card-title class="lqh-mat-card__title">Suppliers List</mat-card-title>
+    <mat-card-title class="lqh-mat-card__title">Category List</mat-card-title>
   </mat-card-header>
   <mat-card-actions class="lqh-mat-card__action">
     <button mat-flat-button color="primary" (click)="openCreateDialog()">
       <mat-icon>add</mat-icon>
-      Add New Suppliers
+      Add New Category
     </button>
   </mat-card-actions>
   <mat-card-content>
-    <app-suppliers-table></app-suppliers-table>
+    <app-categories-table></app-categories-table>
   </mat-card-content>
 </mat-card>
