--- a/src/app/admin/nav-bar/components/nav-bar-side-bar-list/nav-bar-side-bar-list.component.html
+++ b/src/app/admin/nav-bar/components/nav-bar-side-bar-list/nav-bar-side-bar-list.component.html
@@ -1,7 +1,7 @@
 <mat-accordion>
   <div class="lqh-mat-accordion">
     <mat-expansion-panel
-      *ngFor="let panel of accordionList"
+      *ngFor="let panel of accordion"
       [hideToggle]="!(panel.children && panel.children.length > 0)"
       [expanded]="panel.isExpanded"
       [disabled]="panel.isDisabled"
