--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,12 +1,18 @@
 $primary: #2196f3;
 $accent: #26c6da;
-$text-primary-hover-color: #7460ee;
+$primary-hover: #7460ee;
 
-$black: rgba(9, 33, 52, 1);
+$main-font-size: 15px;
+
 $black-1-opacity: rgba(9, 32, 51, 0.1);
+$black-2-opacity: rgba(9, 32, 51, 0.2);
 $black-3-opacity: rgba(9, 32, 51, 0.3);
-$black-5-opacity: rgba(9, 33, 52, 0.5);
+$black-4-opacity: rgba(9, 32, 51, 0.4);
+$black-5-opacity: rgba(9, 32, 51, 0.5);
+$black-6-opacity: rgba(9, 33, 52, 0.6);
 $black-7-opacity: rgba(9, 32, 51, 0.7);
+$black-8-opacity: rgba(9, 32, 51, 0.8);
+$black-9-opacity: rgba(9, 32, 51, 0.9);
 $black-10-opacity: rgba(9, 33, 52, 1);
 
 $disabled-color-1: rgba(0, 0, 0, 0.12);
