--- a/src/styles/_breadcrumbs.scss
+++ b/src/styles/_breadcrumbs.scss
@@ -9,7 +9,7 @@
 
   &__title {
     color: $primary;
-    font-size: 1.5rem;
+    @include font-size(23px);
     margin: {
       top: 5px;
       bottom: 5px;
@@ -19,10 +19,10 @@
   &__link {
     text-decoration: none;
     color: $primary;
-    font-size: 1rem;
+    @include font-size($main-font-size);
     & ~ span {
-      font-size: 1rem;
       color: $black-3-opacity;
+      @include font-size($main-font-size);
     }
   }
 
@@ -33,7 +33,7 @@
       right: 5px;
     }
     color: $black-3-opacity;
-    font-size: 0.9rem;
+    @include font-size(14px);
     font-weight: 900;
   }
 
