--- a/src/styles/_animation.scss
+++ b/src/styles/_animation.scss
@@ -1,6 +1,6 @@
-/////////////////////////////
-/////////Ring Circle/////////
-/////////////////////////////
+// ----------------------------------------------------------------
+// -------------------------RING CIRCLE----------------------------
+// ----------------------------------------------------------------
 .ring-ph-circle {
   width: 80px;
   height: 80px;
