--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -7,7 +7,7 @@
       }
 
       .mat-figure {
-        padding: 0 30px;
+        padding: 0 25px;
         justify-content: flex-start;
       }
     }
@@ -18,6 +18,14 @@
           margin-right: 15px;
         }
       }
+    }
+  }
+
+  .mat-dialog-content {
+    padding: 0;
+
+    &.has-scroll {
+      padding: 0 24px;
     }
   }
 
