--- a/src/styles/employees/_employees.scss
+++ b/src/styles/employees/_employees.scss
@@ -70,6 +70,24 @@
           }
         }
       }
+      .male {
+        &.mat-button-toggle.mat-button-toggle-checked {
+          .ng-fa-icon {
+            color: $primary;
+            @include font-size(18px);
+          }
+        }
+      }
+
+      .female {
+        &.mat-button-toggle.mat-button-toggle-checked {
+          border: #fc4b6c solid 2px;
+          .ng-fa-icon {
+            color: #fc4b6c;
+            @include font-size(18px);
+          }
+        }
+      }
     }
   }
 }
