--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,7 @@
 @import './styles/table';
 @import './styles/card';
 @import './styles/form';
-
+@import './styles/file-uploader';
 // ----------------------------------------------------------------
 // ---------------------------COMPONENTS---------------------------
 // ----------------------------------------------------------------
